<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_nav_dashboard"
        android:title="@string/nav_dashboard"
        android:checkable="true" />
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_nav_history"
        android:title="@string/nav_history"
        android:checkable="true" />
    <item
        android:id="@+id/nav_charts"
        android:icon="@drawable/ic_nav_charts"
        android:title="@string/nav_charts"
        android:checkable="true" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/settings"
        android:checkable="true" />
</menu>
